--- a/index.html
+++ b/index.html
@@ -14,15 +14,11 @@ bodyClass: page-home
 <div class="container pt-2">
   <div class="call">
     <div class="call-box-top">
-      <div class="call-phone"><strong>Phone: </strong> {{ site.data.contact.phone }} </div>
-      <div class="call-email"><strong>Email: </strong>
-        <a href="mailto:{{ site.data.contact.email }}">
-          {{ site.data.contact.email }}
-        </a>
+      <div class="call-email"><strong>MARI BERGABUNG DAN DISKUSI BERSAMA <img src="https://freesvg.org/img/pointing-finger-right.png" style="width: 45px; height: 45px;"/></strong>
       </div>
     </div>
     <div class="call-box-bottom">
-      <a href="{{site.baseurl}}/contact" class="button">Contact</a>
+      <a href="https://s.id/pondasi" class="button">SLACK</a>
     </div>
   </div>
 </div>
@@ -30,7 +26,7 @@ bodyClass: page-home
 <div class="container pt-8 pt-md-10">
   <div class="row justify-content-start">
     <div class="col-12">
-      <h2 class="title-3 text-dark mb-3">Our Services</h2>
+      <h2 class="title-3 text-dark mb-3">Diskusi yang tersedia</h2>
     </div>
     {% for service in site.services %}
     <div class="col-12 col-md-4 mb-1">
