--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ bodyClass: page-home
 <div class="container pt-8 pt-md-10">
   <div class="row justify-content-start">
     <div class="col-12">
-      <h2 class="title-3 text-dark mb-3">Diskusi yang tersedia</h2>
+      <h2 class="title-3 text-dark mb-3">Diskusi yang tersedia:</h2>
     </div>
     {% for service in site.services %}
     <div class="col-12 col-md-4 mb-1">
