--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ bodyClass: page-home
 <div class="container pt-8 pt-md-10">
   <div class="row justify-content-start">
     <div class="col-12">
-      <h2 class="title-3 text-dark mb-3">Diskusi yang tersedia:</h2>
+      <h2 class="title-3 text-dark mb-3">DISKUSI IT</h2>
     </div>
     {% for service in site.services %}
     <div class="col-12 col-md-4 mb-1">
@@ -49,7 +49,7 @@ bodyClass: page-home
 <div class="container pt-5 pb-5 pt-md-7 pb-md-7">
   <div class="row justify-content-center">
     <div class="col-12">
-      <h2 class="title-3 text-dark mb-4">Our Features</h2>
+      <h2 class="title-3 text-dark mb-4">PONDASI SEBAGAI PENYEDIA JASA</h2>
     </div>
     {% for feature in site.data.features %}
     <div class="col-12 col-md-6 col-lg-4 mb-2">
