--- a/diskusi.html
+++ b/diskusi.html
@@ -1,7 +1,7 @@
 ---
-title: Testimonials
+title: Diskusi
 layout: default
-bodyClass: page-testimonials-list
+bodyClass: page-services-list
 ---
 
 <div class="intro">
