--- a/kontak.html
+++ b/kontak.html
@@ -17,56 +17,28 @@ bodyClass: page-contact
   <div class="row">
     <div class="col-12 col-md-8">
       <ul>
-        <li><strong>Phone: </strong>{{ site.data.contact.phone }}</li>
         <li><strong>Email: </strong><a href="mailto:{{ site.data.contact.email }}">
             {{ site.data.contact.email }}</a></li>
         {% if site.data.contact.address %}
         <li><strong>Address: </strong>{{ site.data.contact.address }}</li>
         {% endif %}
       </ul>
-      <h4 class="mt-4">Business Hours</h4>
+      <h4 class="mt-4">Kontak penghubung</h4>
       <table class="table table-sm opening-hours-table">
         <tr>
-          <td class="day font-weight-bold">Monday</td>
-          <td class="opens">8:30am</td>
+          <td class="day font-weight-bold">Arie</td>
           <td>-</td>
-          <td class="closes">5:00pm</td>
+          <td class="opens">081290666605</td>
         </tr>
         <tr>
-          <td class="day font-weight-bold">Tuesday</td>
-          <td class="opens">8:30am</td>
+          <td class="day font-weight-bold">Arifin</td>
           <td>-</td>
-          <td class="closes">5:00pm</td>
+          <td class="opens">081290666605</td>
         </tr>
         <tr>
-          <td class="day font-weight-bold">Wednesday</td>
-          <td class="opens">8:30am</td>
+          <td class="day font-weight-bold">Danang</td>
           <td>-</td>
-          <td class="closes">5:00pm</td>
-        </tr>
-        <tr>
-          <td class="day font-weight-bold">Thursday</td>
-          <td class="opens">8:30am</td>
-          <td>-</td>
-          <td class="closes">5:00pm</td>
-        </tr>
-        <tr>
-          <td class="day font-weight-bold">Friday</td>
-          <td class="opens">8:30am</td>
-          <td>-</td>
-          <td class="closes">5:00pm</td>
-        </tr>
-        <tr>
-          <td class="day font-weight-bold">Saturday</td>
-          <td class="opens">Closed</td>
-          <td></td>
-          <td class="closes"></td>
-        </tr>
-        <tr>
-          <td class="day font-weight-bold">Sunday</td>
-          <td class="opens">Closed</td>
-          <td> </td>
-          <td class="closes"></td>
+          <td class="opens">081290666605</td>
         </tr>
       </table>
     </div>
