--- a/kontak.html
+++ b/kontak.html
@@ -28,7 +28,7 @@ bodyClass: page-contact
         <tr>
           <td class="day font-weight-bold">Arie</td>
           <td>-</td>
-          <td class="opens">081290666605</td>
+          <td class="opens"><a href="tel:+6281290666605">+6281290666605</a></td>
         </tr>
         <tr>
           <td class="day font-weight-bold">Arifin</td>
