--- a/kontak.html
+++ b/kontak.html
@@ -28,17 +28,17 @@ bodyClass: page-contact
         <tr>
           <td class="day font-weight-bold">Arie</td>
           <td>-</td>
-          <td class="opens"><a href="tel:+6281290666605">+6281290666605</a></td>
+          <td class="opens"><a href="tel:+6281290666605">+62 812-9066-6605</a></td>
         </tr>
         <tr>
           <td class="day font-weight-bold">Arifin</td>
           <td>-</td>
-          <td class="opens">081290666605</td>
+          <td class="opens"><a href="tel:+6283893664907">+62 838-9366-4907</a></td>
         </tr>
         <tr>
           <td class="day font-weight-bold">Danang</td>
           <td>-</td>
-          <td class="opens">081290666605</td>
+          <td class="opens"><a href="tel:+6281386215006">+62 813-8621-5006</a></td>
         </tr>
       </table>
     </div>
