--- a/kontak.html
+++ b/kontak.html
@@ -26,17 +26,17 @@ bodyClass: page-contact
       <h4 class="mt-4">Kontak penghubung</h4>
       <table class="table table-sm opening-hours-table">
         <tr>
-          <td class="day font-weight-bold">Arie</td>
+          <td class="day font-weight-bold">Arie (<a href="https://instagram.com/13_minerale">@13_minerale</a>)</td>
           <td>-</td>
           <td class="opens"><a href="tel:+6281290666605">+62 812-9066-6605</a></td>
         </tr>
         <tr>
-          <td class="day font-weight-bold">Arifin</td>
+          <td class="day font-weight-bold">Arifin (<a href="https://instagram.com/nurarif_in">@nurarif_in</a>)</td>
           <td>-</td>
           <td class="opens"><a href="tel:+6283893664907">+62 838-9366-4907</a></td>
         </tr>
         <tr>
-          <td class="day font-weight-bold">Danang</td>
+          <td class="day font-weight-bold">Danang (<a href="https://instagram.com/danangtriatmaja_">@danangtriatmaja_</a>)</td>
           <td>-</td>
           <td class="opens"><a href="tel:+6281386215006">+62 813-8621-5006</a></td>
         </tr>
