--- a/kontak.html
+++ b/kontak.html
@@ -41,6 +41,33 @@ bodyClass: page-contact
           <td class="opens"><a href="tel:+6281386215006">+62 813-8621-5006</a></td>
         </tr>
       </table>
+      <div class="container pb-6">
+        <div class="row">
+          {% for team in site.team %}
+          <div class="col-12 col-md-6 mb-1">
+            <div class="team team-summary">
+              {% if team.image %}
+              <div class="team-image">
+                <img
+                  alt="{{ team.title }} logo"
+                  class="img-fluid mb-2"
+                  src="{{site.baseurl}}{{ team.image }}"
+                />
+              </div>
+              {% endif %}
+              <div class="team-meta">
+                <h2 class="team-name">{{ team.title }}</h2>
+                <p class="team-description">{{ team.jobtitle }}</p>
+                {% if team.linkedinurl %}
+                <a target="_blank" href="{{ team.linkedinurl }}">LinkedIn</a> 
+                {% endif %}
+              </div>
+              <div class="team-content">{{ team.content }}</div>
+            </div>
+          </div>
+          {% endfor %}
+        </div>
+      </div>
     </div>
   </div>
 </div>
