--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ bodyClass: page-home
     </div>
     {% endfor %}
     <div class="col-12 text-center">
-      <a class="button button-primary mt-2" href="{{site.baseurl}}/services">View All Services</a>
+      <a class="button button-primary mt-2" href="{{site.baseurl}}/services">Lihat semua topik diskusi</a>
     </div>
   </div>
 </div>
