--- a/kontak.html
+++ b/kontak.html
@@ -8,7 +8,7 @@ bodyClass: page-services-list
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <h1>Kontak</h1>
+        <h1>Hubungi Kami</h1>
       </div>
     </div>
   </div>
