--- a/jasa.html
+++ b/jasa.html
@@ -30,14 +30,14 @@ bodyClass: page-testimonials-list
 
 <div class="container pb-6">
   <div class="row">
-    {% for service in site.services %}
+    {% for jasa in site.testimonials %}
     <div class="col-12 col-md-6 mb-2 ">
       <div class="testimonials testimonials-summary">
         <div class="testimonials-meta">
-          <h2 class="testimonials-title"><a href="{{site.baseurl}}{{ service.url }}">{{ service.title }}</a></h2>
-          <p class="testimonials-name">{{ service.subtitle }}</p>
+          <h2 class="testimonials-title"><a href="{{site.baseurl}}{{ service.url }}">{{ jasa.title }}</a></h2>
+          <p class="testimonials-name">{{ jasa.subtitle }}</p>
         </div>
-        <div class="testimonials-content">{{ service.content | markdownify | strip_html | truncate: 500 }}</div>
+        <div class="testimonials-content">{{ jasa.content | markdownify | strip_html | truncate: 500 }}</div>
       </div>
     </div>
     {% endfor %}
